--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,16 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "CV"
+    url: /cv/
+  - title: "Publications"
+    url: /publications/
+  - title: "Honors"
+    url: /honors/
+  - title: "Blog"
+    url: /blog/
   # - title: "About"
+  #
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
